<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.InstructionsFragment">


    <!--    ConstraintLayout is the parent layout ,
            organize all components relationships-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16"
            android:layout_marginTop="@dimen/dim_32"
            android:layout_marginEnd="@dimen/dim_16"
            android:gravity="center"
            android:text="@string/the_app_instruction"
            android:textSize="@dimen/dim_txt_24"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginTop="@dimen/dim_32"
            android:layout_marginEnd="@dimen/dim_32"
            android:gravity="center"
            android:text="@string/long_instruction"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim_txt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTextView" />

        <Button
            android:id="@+id/doneInstructionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_64"
            android:layout_marginTop="@dimen/dim_64"
            android:layout_marginEnd="@dimen/dim_64"
            android:background="@drawable/border_solid"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTextView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
