<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.ShoesDetailsFragment">

    <data>

        <variable
            name="shoe"
            type="com.waleed.fwdfirstapp.models.Shoe" />
    </data>


    <!--    ConstraintLayout is the parent layout ,
           organize all main components relationships-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoeNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginTop="@dimen/dim_32"
            android:layout_marginEnd="@dimen/dim_32"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginLeft="@dimen/dim_32"
            android:layout_marginEnd="@dimen/dim_32"
            android:layout_marginRight="@dimen/dim_32"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeNameTextView" />

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginTop="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_32"
            android:text="@string/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeNameEditText" />

        <EditText
            android:id="@+id/sizeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginEnd="@dimen/dim_32"
            android:autofillHints="0"
            android:hint="@string/size"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizeTextView" />


        <TextView
            android:id="@+id/companyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginTop="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_32"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizeEditText" />

        <EditText
            android:id="@+id/companyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginLeft="@dimen/dim_32"
            android:layout_marginEnd="@dimen/dim_32"
            android:layout_marginRight="@dimen/dim_32"
            android:autofillHints=""
            android:hint="@string/company"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyTextView" />


        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginTop="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_32"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyEditText" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32"
            android:layout_marginLeft="@dimen/dim_32"
            android:layout_marginEnd="@dimen/dim_32"
            android:layout_marginRight="@dimen/dim_32"
            android:autofillHints=""
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        <!--    LinearLayout is the container
              of the save and cancel buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionEditText">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_32"
                android:layout_marginTop="@dimen/dim_16"
                android:layout_marginRight="@dimen/dim_32"
                android:background="@drawable/border_solid"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_txt_18" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_32"
                android:layout_marginTop="@dimen/dim_16"
                android:layout_marginRight="@dimen/dim_32"
                android:layout_marginBottom="@dimen/dim_16"
                android:background="@drawable/border_cancel"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_txt_16" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>